# desktop

./: .gitignore  CLAUDE.md  Entitlements.plist  LICENSE  README.md  eslint.config.js  installation.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
src-tauri/: .tarpaulin.toml  Cargo.toml  audit.toml  build.rs  clippy.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml  config.toml
src-tauri/.config/: nextest.toml
src-tauri/src/: account_config.rs  account_deletion.rs  account_deletion_commands.rs  account_deletion_steps.rs  account_deletion_tests.rs  account_id_store.rs  account_name_store.rs  app_lifecycle.rs  app_state.rs  app_state_ops.rs  app_state_types.rs  bundle_skills.rs  bundle_skills_tests.rs  child_repo_discovery.rs  child_repo_discovery_tests.rs  collaborators.rs  collaborators_tests.rs  command_registry.rs  commands.rs  config_local_write.rs  config_local_write_tests.rs  config_map_field.rs  config_merge.rs  config_paths.rs  connect_repo.rs  connected_platforms.rs  credential_migration.rs  credential_provider_list.rs  credential_repo_sync.rs  credential_save_core.rs  credential_store.rs  credential_store_tests.rs  deep_link_routing.rs  draft_edits.rs  draft_output.rs  draft_post_scanner.rs  draft_queries.rs  draft_queries_tests.rs  draft_schedule.rs  engagement_cache.rs  (+110 more)
src-tauri/src/analytics/: cache.rs  client.rs  engagement_sync.rs  mod.rs  sites.rs
src-tauri/src/http_server/: activate_route.rs  github_project_config.rs  mod.rs  projects_route.rs  routes.rs  (+3 more)
src-tauri/tests/: integration_test.rs  unit_test.rs
(+457 files in other folders)
