[package]
name = "postlane-desktop"
version = "0.1.0"
description = "Postlane Desktop - Social media post scheduling"
authors = ["Postlane"]
edition = "2021"

[lib]
name = "postlane_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-keyring = "0.1"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
notify = "6"
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "sync", "time"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

